@@ -59,6 +59,7 @@ Copyright (c) 2008-2014, David P. D. Moss. All rights reserved.
  IPAddress('192.0.2.1'),
  IPAddress('192.0.2.0')]
  
+For IPv4, network (first) and broadcast (last) address must be skipped.
 >>> pprint.pprint(list(IPNetwork('192.0.2.0/29').iter_hosts()))
 [IPAddress('192.0.2.1'),
  IPAddress('192.0.2.2'),
@@ -67,15 +68,27 @@ Copyright (c) 2008-2014, David P. D. Moss. All rights reserved.
  IPAddress('192.0.2.5'),
  IPAddress('192.0.2.6')]
 
+For IPv6, Subnet-Router anycast address (first) must be skipped.
 >>> pprint.pprint(list(IPNetwork('::ffff:192.0.2.0/125').iter_hosts()))
-[IPAddress('::ffff:192.0.2.0'),
- IPAddress('::ffff:192.0.2.1'),
+[IPAddress('::ffff:192.0.2.1'),
  IPAddress('::ffff:192.0.2.2'),
  IPAddress('::ffff:192.0.2.3'),
  IPAddress('::ffff:192.0.2.4'),
  IPAddress('::ffff:192.0.2.5'),
  IPAddress('::ffff:192.0.2.6'),
  IPAddress('::ffff:192.0.2.7')]
+
+Very small IPNetworks do contain some IP addresses
+>>> list(IPNetwork("192.168.0.0/31"))
+[IPAddress('192.168.0.0'), IPAddress('192.168.0.1')]
+>>> list(IPNetwork("1234::/128"))
+[IPAddress('1234::')]
+
+But they have no IPs that can be assigned to hosts.
+>>> list(IPNetwork("1234::/128").iter_hosts())
+[]
+>>> list(IPNetwork("192.168.0.0/31").iter_hosts())
+[]
 
 }}}
 
